# iquote-sample

./: .bazelrc  .gitignore  MODULE.bazel  README.md
srcs/binary/ios_application/: BUILD
srcs/binary/swift_binary/: BUILD  main.swift
srcs/module_a/: BUILD  a.m
srcs/module_a/include/: a.h
srcs/module_a/sub_module_b/: sub_b.h
