module(
    name = "sample",
    version = "0.0.1",
    repo_name = "sample",
)

bazel_dep(name = "rules_swift", version = "1.6.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "2.1.0", repo_name = "build_bazel_rules_apple")

# xcodeproj rules
bazel_dep(name = "rules_xcodeproj", version = "1.2.0", repo_name = "com_github_buildbuddy_io_rules_xcodeproj", dev_dependency = True)
# vscode plugin
#bazel_dep(name = "bis", version = "0.2.0", dev_dependency = True)
